--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "json-schema-fill-defaults",
   "version": "1.0.2",
   "description": "Uses JSON Schema to fill in missing required values that have a default value.",
-  "main": "bundle.js",
+  "main": "dist/bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel index.js --out-file bundle.js"
+    "test:unit": "node test/test.js",
+    "test:lint": "eslint src",
+    "test": "npm run test:lint && npm run test:unit",
+    "build": "babel index.js --out-file bundle.js",
+    "watch": "babel-watch src/index.js --out-file dist/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +28,14 @@
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-0": "^6.5.0"
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-watch": "^2.0.5",
+    "is-my-json-valid": "^2.15.0",
+    "eslint": "^3.7.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-module-utils": "^2.0.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0"
   }
 }
