--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "test:unit": "node test/test.js",
     "test:lint": "eslint src",
-    "test": "npm run test:lint && npm run test:unit",
-    "build": "babel index.js --out-file bundle.js",
-    "watch": "babel-watch src/index.js --out-file dist/bundle.js"
+    "test": "npm run build && npm run test:lint && npm run test:unit",
+    "build": "babel src/index.js --out-file dist/bundle.js",
+    "watch": "babel-watch src/index.js --out-file dist/bundle.js",
+    "debug": "npm run build && npm run test:unit"
   },
   "repository": {
     "type": "git",
